--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -32,6 +32,9 @@
                                 <rect key="frame" x="185" y="475" width="44" height="34"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                                 <state key="normal" title="Login"/>
+                                <connections>
+                                    <action selector="didTapLoginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Rdp-Kx-fNT"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account? " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QIM-Op-fZ7">
                                 <rect key="frame" x="117" y="534" width="180.5" height="21"/>
@@ -44,7 +47,7 @@
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                                 <state key="normal" title="Sign Up"/>
                                 <connections>
-                                    <action selector="onTapSignUpButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dVC-Zq-Aid"/>
+                                    <action selector="didTapSignUpButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dVC-Zq-Aid"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -71,7 +74,10 @@
                     </view>
                     <navigationItem key="navigationItem" id="i8T-fd-UbB"/>
                     <connections>
+                        <outlet property="passwordField" destination="Qc5-NP-e6i" id="a5w-iG-6aK"/>
+                        <outlet property="usernameField" destination="yY4-bQ-kTw" id="erI-n8-QzM"/>
                         <segue destination="lsG-k1-C3f" kind="presentation" identifier="signUpSegue" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="eP9-h3-fEE"/>
+                        <segue destination="fbe-LR-K9w" kind="presentation" identifier="toFeedSegue" modalPresentationStyle="fullScreen" id="ltJ-oX-Rcb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -159,7 +165,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="270" y="847"/>
+            <point key="canvasLocation" x="2122" y="867"/>
         </scene>
         <!--SignUp-->
         <scene sceneID="oLY-VP-VQG">
@@ -197,6 +203,34 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6cX-cr-dDz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="118.52678571428571"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="SD2-vu-S7a">
+            <objects>
+                <viewController id="fbe-LR-K9w" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4cy-4A-pi3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6nc-4A-hE2">
+                                <rect key="frame" x="169" y="437.5" width="76" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6nc-4A-hE2" firstAttribute="centerX" secondItem="4cy-4A-pi3" secondAttribute="centerX" id="1pW-SP-MX6"/>
+                            <constraint firstItem="6nc-4A-hE2" firstAttribute="centerY" secondItem="4cy-4A-pi3" secondAttribute="centerY" id="MhD-43-odv"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="E9p-Zk-NXt"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="vpR-Xz-gGV"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tJC-Az-AOe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1007" y="867"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
