--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -77,7 +77,7 @@
                         <outlet property="passwordField" destination="Qc5-NP-e6i" id="a5w-iG-6aK"/>
                         <outlet property="usernameField" destination="yY4-bQ-kTw" id="erI-n8-QzM"/>
                         <segue destination="lsG-k1-C3f" kind="presentation" identifier="signUpSegue" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="eP9-h3-fEE"/>
-                        <segue destination="fbe-LR-K9w" kind="presentation" identifier="toFeedSegue" modalPresentationStyle="fullScreen" id="ltJ-oX-Rcb"/>
+                        <segue destination="LIJ-SM-8r9" kind="presentation" identifier="toFeedSegue" modalPresentationStyle="fullScreen" id="ltJ-oX-Rcb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -165,7 +165,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="2122" y="867"/>
+            <point key="canvasLocation" x="3031.884057971015" y="866.51785714285711"/>
         </scene>
         <!--SignUp-->
         <scene sceneID="oLY-VP-VQG">
@@ -204,10 +204,10 @@
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="118.52678571428571"/>
         </scene>
-        <!--View Controller-->
+        <!--Feed-->
         <scene sceneID="SD2-vu-S7a">
             <objects>
-                <viewController id="fbe-LR-K9w" sceneMemberID="viewController">
+                <viewController id="fbe-LR-K9w" customClass="FeedViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4cy-4A-pi3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -226,15 +226,42 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="E9p-Zk-NXt"/>
                     </view>
-                    <navigationItem key="navigationItem" id="vpR-Xz-gGV"/>
+                    <navigationItem key="navigationItem" title="Feed" id="vpR-Xz-gGV">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="Duj-NI-0pD">
+                            <connections>
+                                <action selector="didTapLogout:" destination="fbe-LR-K9w" id="uAy-Ax-Qui"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="toLoginSegue" id="dO6-jJ-1xI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tJC-Az-AOe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1007" y="867"/>
+            <point key="canvasLocation" x="838" y="867"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="pNH-hH-HeH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="LIJ-SM-8r9" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ire-aa-Vkh">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="fbe-LR-K9w" kind="relationship" relationship="rootViewController" id="BCK-8x-PlB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EDJ-8z-jy2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-109" y="867"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="uTr-GK-BhJ"/>
+        <segue reference="dO6-jJ-1xI"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Icon-61" width="60" height="60"/>
