--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController wantsFullScreenLayout="YES" modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="LoginViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" wantsFullScreenLayout="YES" modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="LoginViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleAspectFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -212,18 +212,65 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6nc-4A-hE2">
-                                <rect key="frame" x="169" y="437.5" width="76" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Z4n-nR-MUO">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="InstaPostCell" rowHeight="536" id="c9J-nN-F0t" customClass="InstaPostTableViewCell">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="536"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="c9J-nN-F0t" id="DyT-WR-rTp">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="536"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z9l-U0-43g">
+                                                    <rect key="frame" x="20" y="11" width="45" height="45"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="45" id="IAj-Qt-IbH"/>
+                                                        <constraint firstAttribute="width" constant="45" id="xdD-a3-Df9"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwy-pt-jnf">
+                                                    <rect key="frame" x="25" y="451" width="59.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7En-Sh-RBc">
+                                                    <rect key="frame" x="95" y="23" width="78.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="imf-cK-G9A">
+                                                    <rect key="frame" x="22" y="66" width="370" height="370"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="imf-cK-G9A" secondAttribute="height" multiplier="1:1" id="cBh-BF-S2h"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="imf-cK-G9A" firstAttribute="top" secondItem="Z9l-U0-43g" secondAttribute="bottom" constant="10" id="Eni-ec-JVU"/>
+                                                <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="gwy-pt-jnf" secondAttribute="trailing" constant="25" id="MQq-dH-aLv"/>
+                                                <constraint firstItem="7En-Sh-RBc" firstAttribute="centerY" secondItem="Z9l-U0-43g" secondAttribute="centerY" id="Rlc-xA-GwD"/>
+                                                <constraint firstItem="7En-Sh-RBc" firstAttribute="leading" secondItem="Z9l-U0-43g" secondAttribute="trailing" constant="30" id="UAT-uq-Ntl"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="imf-cK-G9A" secondAttribute="trailing" constant="2" id="VHF-Us-DKg"/>
+                                                <constraint firstItem="Z9l-U0-43g" firstAttribute="leading" secondItem="DyT-WR-rTp" secondAttribute="leadingMargin" id="Wsa-Vg-IOi"/>
+                                                <constraint firstItem="Z9l-U0-43g" firstAttribute="top" secondItem="DyT-WR-rTp" secondAttribute="topMargin" id="Zu5-qQ-bI3"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="7En-Sh-RBc" secondAttribute="trailing" constant="15" id="dIO-T6-AfO"/>
+                                                <constraint firstItem="imf-cK-G9A" firstAttribute="centerX" secondItem="DyT-WR-rTp" secondAttribute="centerX" id="fLP-GP-Hlw"/>
+                                                <constraint firstItem="gwy-pt-jnf" firstAttribute="top" secondItem="imf-cK-G9A" secondAttribute="bottom" constant="15" id="fzq-33-WzL"/>
+                                                <constraint firstItem="gwy-pt-jnf" firstAttribute="leading" secondItem="DyT-WR-rTp" secondAttribute="leading" constant="25" id="krt-sG-52l"/>
+                                                <constraint firstItem="imf-cK-G9A" firstAttribute="centerX" secondItem="DyT-WR-rTp" secondAttribute="centerX" id="rS6-4g-bNY"/>
+                                                <constraint firstItem="imf-cK-G9A" firstAttribute="leading" secondItem="DyT-WR-rTp" secondAttribute="leadingMargin" constant="2" id="tQk-eE-DCJ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="6nc-4A-hE2" firstAttribute="centerX" secondItem="4cy-4A-pi3" secondAttribute="centerX" id="1pW-SP-MX6"/>
-                            <constraint firstItem="6nc-4A-hE2" firstAttribute="centerY" secondItem="4cy-4A-pi3" secondAttribute="centerY" id="MhD-43-odv"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="E9p-Zk-NXt"/>
                     </view>
                     <navigationItem key="navigationItem" title="Feed" id="vpR-Xz-gGV">
@@ -234,12 +281,12 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="toLoginSegue" id="dO6-jJ-1xI"/>
+                        <outlet property="tableView" destination="Z4n-nR-MUO" id="pz1-XO-lTS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tJC-Az-AOe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="838" y="867"/>
+            <point key="canvasLocation" x="837.68115942028987" y="866.51785714285711"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pNH-hH-HeH">
@@ -261,8 +308,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="BCK-8x-PlB"/>
-        <segue reference="dO6-jJ-1xI"/>
+        <segue reference="eP9-h3-fEE"/>
+        <segue reference="uTr-GK-BhJ"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Icon-61" width="60" height="60"/>
